@startuml

title __AUTONOMOUSOLD's Class Diagram__\n

  package org.firstinspires.ftc.teamcode {
    package org.firstinspires.ftc.teamcode.AutonomousOld {
      class HWPTest {
          + runOpMode()
      }
    }
  }
  

  package org.firstinspires.ftc.teamcode {
    package org.firstinspires.ftc.teamcode.AutonomousOld {
      class HardwarePushbot {
          ~ motorFL : DcMotor
          ~ motorFR : DcMotor
          ~ motorBL : DcMotor
          ~ motorBR : DcMotor
          ~ motorArm : DcMotor
          ~ motorMinRaise : DcMotor
          ~ motorMinEnlarge : DcMotor
          - FLT : int
          - FRT : int
          - BLT : int
          - BRT : int
          - ARMT : int
          - SPEEDCOEF : double
          ~ hwMap : HardwareMap
          ~ HardwarePushbot()
          + init()
          + setTarget()
          + setMotorsToZero()
          + moveArm()
          + ArmZero()
      }
    }
  }
  

  package org.firstinspires.ftc.teamcode {
    package org.firstinspires.ftc.teamcode.AutonomousOld {
      class mainAuto {
          + runOpMode()
          - active()
      }
    }
  }
  

  package org.firstinspires.ftc.teamcode {
    package org.firstinspires.ftc.teamcode.AutonomousOld {
      class mainAuto2 {
          + runOpMode()
          - active()
      }
    }
  }
  

  package org.firstinspires.ftc.teamcode {
    package org.firstinspires.ftc.teamcode.AutonomousOld {
      class test {
          {static} - TFOD_MODEL_ASSET : String
          {static} - LABEL_GOLD_MINERAL : String
          {static} - LABEL_SILVER_MINERAL : String
          - vuforia : VuforiaLocalizer
          - tfod : TFObjectDetector
          + goldMineralX : int
          + motorTest : DcMotor
          + ok : boolean
          + oprire : boolean
          + runOpMode()
          + run()
          - initVuforia()
          - initTfod()
      }
    }
  }
  

  package org.firstinspires.ftc.teamcode {
    package org.firstinspires.ftc.teamcode.AutonomousOld {
      class vuforiaa {
          {static} - TFOD_MODEL_ASSET : String
          {static} - LABEL_GOLD_MINERAL : String
          {static} - LABEL_SILVER_MINERAL : String
          - vuforia : VuforiaLocalizer
          - tfod : TFObjectDetector
          + runOpMode()
          + initVuforia()
          + initTfod()
      }
    }
  }
  

  HWPTest -up-|> LinearOpMode
  HWPTest o-- HardwarePushbot : robot
  LinearOpModeHelper -up-|> Runnable
  mainAuto -up-|> LinearOpMode
  mainAuto o-- HardwarePushbot : robot
  LinearOpModeHelper -up-|> Runnable
  mainAuto2 -up-|> LinearOpMode
  mainAuto2 o-- HardwarePushbot : robot
  LinearOpModeHelper -up-|> Runnable
  test -up-|> LinearOpMode
  LinearOpModeHelper -up-|> Runnable
  vuforiaa -up-|> LinearOpMode
  LinearOpModeHelper -up-|> Runnable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
